# automation

./: .env.example  .gitignore  PROJECT_ROADMAP.md  Pipfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 63669f20df03_initial_migration.py
examples/: workspace_demo.py
skills/social_media/: SKILL.md
skills/social_media/scripts/: post_update.py
skills/workspace/: SKILL.md
skills/workspace/scripts/: manage_calendar.py
src/automation_hub/core/: database.py  models.py  service.py
src/automation_hub/services/social/: client.py
src/automation_hub/services/workspace/: calendar.py  client.py  sheets.py  tasks.py
tests/: test_basic.py  test_real_calendar.py  test_workspace_managers.py
