[project]
name = "automation-hub"
version = "0.1.0"
description = "A standard high-level Python project for automation and Nanobot skills."
authors = [{ name = "Human", email = "human@example.com" }]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.23.0",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
